Issue #1 Fixed - Main Menu Overlay
Color Scheme is active no matter where you are in the site content.

Issue #1:
Menu BG colors where only visible for the size of the viewport and when
scrolling down they were cut off.

--- a/devcore/less/nav.less
+++ b/devcore/less/nav.less
@@ -5,6 +5,25 @@ header{
 	z-index: 2;
 }
 
+/*** BODY ***/
+body.menu-visible {
+		#over {
+			background-color: @content-bg;
+			position: fixed;
+			z-index:2;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right:0;
+			display: block;
+			clear: both;
+			opacity: 0.75;				
+
+			}
+}
+
 /*** NAVIGATION ***/
 
 
@@ -120,21 +139,7 @@ header{
 			clear: both;
 
 			} */
-
-
-			#over {
-				background-color: @content-bg;
-				position: fixed;
-			z-index: 11;
-			width: 100%;
-			height: 100%;
-			top: 0;
-			left: 0;
-			bottom: 0;
-			display: block;
-			clear: both;				
-
-			}
+		
 		}
 
 
